<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Pay History / will display always -->
    <item android:id="@+id/action_history"
        android:icon="@drawable/ic_action_event"
        android:title="@string/action_history"
        android:showAsAction="ifRoom"/>

    <!-- Persons -->
    <item android:id="@+id/action_person"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_person_report"
        android:showAsAction="ifRoom" />

    <!-- Refresh -->
    <item android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_sync"
        android:showAsAction="ifRoom" />

    <!-- Setting -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_setting"
        android:showAsAction="never" />

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>


</menu>